--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /ExercicioGeometria2D/target/
 /ExercicioLojaComercial/target/
 /ExercicioCar4Rent/target/
+/20201102 - ExercicioCar4Rent/target/
+/20201102 - ExercicioGeometria2D/target/
+/20201102 - ExercicioLojaComercial/target/
