--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /20201102 - ExercicioCar4Rent/target/
 /20201102 - ExercicioGeometria2D/target/
 /20201102 - ExercicioLojaComercial/target/
+/20201102-ExercicioNumerosComplexos/target/
