--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /20201102 - ExercicioGeometria2D/target/
 /20201102 - ExercicioLojaComercial/target/
 /20201102-ExercicioNumerosComplexos/target/
+/POO/20201102-ExercicioNumerosComplexos/target/
