--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /Java Files/20201103-ExercicioUtenteDeGinasio/target/
 /Java Files/20201103 - ExercicioUtenteDeGinasio/target/
+/Java Files/20201103 - ExercicioTempo/target/
