Exercicio dos Trabalhadores e Impostos na nova diretoria

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /Java Files/20201103-ExercicioUtenteDeGinasio/target/
 /Java Files/20201103 - ExercicioUtenteDeGinasio/target/
 /Java Files/20201103 - ExercicioTempo/target/
+/Java Files/20201105 - ExercicioImpostos/target/
+/Java Files/20201105 - ExercicioTrabalhador/target/
