Exercicio Figuras e Inicio do Exercicio dos Contadores

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /Java Files/20201103 - ExercicioTempo/target/
 /Java Files/20201105 - ExercicioImpostos/target/
 /Java Files/20201105 - ExercicioTrabalhador/target/
+/Java Files/20201106 - ExercicioFiguras/target/
