Exercicio Contadores Domesticos - Finalizado (?)

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /Java Files/20201105 - ExercicioImpostos/target/
 /Java Files/20201105 - ExercicioTrabalhador/target/
 /Java Files/20201106 - ExercicioFiguras/target/
+/Java Files/20201106 - ExercicioContadoresDomesticos/target/
