--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /Java Files/20201105 - ExercicioTrabalhador/target/
 /Java Files/20201106 - ExercicioFiguras/target/
 /Java Files/20201106 - ExercicioContadoresDomesticos/target/
+/Java Files/20201106 - ExercicioCreditosBancarios/target/
