Algumas pequenas strings alteradas.

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /Java Files/20201106 - ExercicioFiguras/target/
 /Java Files/20201106 - ExercicioContadoresDomesticos/target/
 /Java Files/20201106 - ExercicioCreditosBancarios/target/
+/Java Files/POO/20201106 - ExercicioCreditosBancarios/target/
