Exercicio Escola (interfaces) + Exercicio Tributaveis (interfaces)

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /Java Files/20201106 - ExercicioContadoresDomesticos/target/
 /Java Files/20201106 - ExercicioCreditosBancarios/target/
 /Java Files/POO/20201106 - ExercicioCreditosBancarios/target/
+/Java Files/POO/20201110 - ExercicioTributaveis/target/
+/Java Files/POO/20201110 - ExercicioTributaveis/nbproject/
