--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 /Java Files/POO/20201106 - ExercicioCreditosBancarios/target/
 /Java Files/POO/20201110 - ExercicioTributaveis/target/
 /Java Files/POO/20201110 - ExercicioTributaveis/nbproject/
+/Java Files/POO/20201110 - ExercicioEscola/nbproject/
+/Java Files/POO/20201110 - ExercicioEscola/target/
