Alguma limpeza de diretorias.

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /Java Files/POO/20201110 - ExercicioTributaveis/nbproject/
 /Java Files/POO/20201110 - ExercicioEscola/nbproject/
 /Java Files/POO/20201110 - ExercicioEscola/target/
+/Java Files/Outros/lixo/target/
