Exercicios de Comparator e Comparable

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,8 @@
 /Java Files/POO/20201110 - ExercicioEscola/nbproject/
 /Java Files/POO/20201110 - ExercicioEscola/target/
 /Java Files/Outros/lixo/target/
+/Java Files/POO/20201111 - FigurasComComparableEComparator/target/
+/Java Files/POO/20201112 - VencimentosComComparable/target/
+/Java Files/POO/20201112 - VencimentosComComparable/nbproject/
+/Java Files/POO/20201112 - VencimentosComComparator/target/
+/Java Files/POO/20201112 - VencimentosComComparator/nbproject/
