Exercicio Imposto a Utilizar Comparator e Multiplos Criterios(2)

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@
 /Java Files/POO/20201112 - VencimentosComComparable/nbproject/
 /Java Files/POO/20201112 - VencimentosComComparator/target/
 /Java Files/POO/20201112 - VencimentosComComparator/nbproject/
+/Java Files/POO/20201112 - ExercicioImpostos/target/
+/Java Files/POO/20201112 - ExercicioImpostosComComparator/target/
+/Java Files/POO/20201112 - ExercicioImpostosComComparator/nbproject/
