Exercicio de TDD (Classe MyArray) concluído.

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@
 /Java Files/POO/20201112 - ExercicioImpostos/target/
 /Java Files/POO/20201112 - ExercicioImpostosComComparator/target/
 /Java Files/POO/20201112 - ExercicioImpostosComComparator/nbproject/
+/Java Files/POO/20201113 - Exercicio-TDD-MyArray/nbproject/
+/Java Files/POO/20201113 - Exercicio-TDD-MyArray/target/
