Several changes and files, after Java OO Test

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,6 @@
 /Java Files/POO/20201112 - ExercicioImpostosComComparator/nbproject/
 /Java Files/POO/20201113 - Exercicio-TDD-MyArray/nbproject/
 /Java Files/POO/20201113 - Exercicio-TDD-MyArray/target/
+/Java Files/PDS/20201204-BikeBuilder/target/
+/Java Files/PDS/20201204-Observer/target/
+/Java Files/PDS/20201204-Adapter/target/
