primeira versão do documento da aula de Java

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,7 @@
 /Java Files/PDS/20201204-BikeBuilder/target/
 /Java Files/PDS/20201204-Observer/target/
 /Java Files/PDS/20201204-Adapter/target/
+/Java Files/Outros/JavaBeginnersGuide_Chapter8/target/
+/Java Files/Outros/20201216-ClubeDesportivo/target/
+/Java Files/Outros/JavaBeginnersGuide/target/
+/Java Files/Outros/HeadFirstJava_Book/target/
