Criação Classe Ponto e Segmento de Reta

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@
 /Java Files/Outros/20201216-ClubeDesportivo/target/
 /Java Files/Outros/JavaBeginnersGuide/target/
 /Java Files/Outros/HeadFirstJava_Book/target/
+/Java Files/POO/20210105-ExercicioSegmentoDeReta/nbproject/
