Testes para Classe Empregado, ajuste nos cálculos, a resolve item 4 da folha de exercícios

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,6 @@
 /Java Files/Outros/JavaBeginnersGuide/target/
 /Java Files/Outros/HeadFirstJava_Book/target/
 /Java Files/POO/20210105-ExercicioSegmentoDeReta/nbproject/
+/Java Files/POO/20210105-Utilitarios/target/
+/Java Files/POO/20210105-ExercicioEmpregado/target/
+/Java Files/POO/20210105-ExercicioEmpregado/nbproject/
