--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@
 /Java Files/POO/20210105-Utilitarios/target/
 /Java Files/POO/20210105-ExercicioEmpregado/target/
 /Java Files/POO/20210105-ExercicioEmpregado/nbproject/
+/Java Files/POO/20210105-ExercicioSegmentoDeReta/target/
