PDFs do dia de hoje

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@
 /Java Files/POO/20210105-ExercicioEmpregado/target/
 /Java Files/POO/20210105-ExercicioEmpregado/nbproject/
 /Java Files/POO/20210105-ExercicioSegmentoDeReta/target/
+/Java Files/POO/20210105-ExercicioExposicao/target/
