1. Adicionado projeto de Máquina de VideoPoker. 2. Adicionadas Fichas de Exerício para o dia 20200601.

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@
 /Java Files/POO/20210105-ExercicioEmpregado/nbproject/
 /Java Files/POO/20210105-ExercicioSegmentoDeReta/target/
 /Java Files/POO/20210105-ExercicioExposicao/target/
+/Java Files/POO/20210105-CardDeck/nbproject/
+/Java Files/POO/20210105-CardDeck/target/
