Projeto Pedra Papel e Tesoura

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@
 /Java Files/POO/20210105-ExercicioExposicao/target/
 /Java Files/POO/20210105-CardDeck/nbproject/
 /Java Files/POO/20210105-CardDeck/target/
+/Java Files/POO/20210106-ExercicioPedraPapelTesoura/target/
