Projeto Lista Telefonica

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@
 /Java Files/POO/20210105-CardDeck/nbproject/
 /Java Files/POO/20210105-CardDeck/target/
 /Java Files/POO/20210106-ExercicioPedraPapelTesoura/target/
+/Java Files/POO/20210106-ExercicioListaTelefonica/target/
