New files Added. Tests Included.

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@
 /Java Files/POO/20210105-CardDeck/target/
 /Java Files/POO/20210106-ExercicioPedraPapelTesoura/target/
 /Java Files/POO/20210106-ExercicioListaTelefonica/target/
+/Java Files/POO/20210106-ExercicioJogoDeCartas/nbproject/
