Adicionando ficheiros faltantes

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@
 /Java Files/POO/20210106-ExercicioPedraPapelTesoura/target/
 /Java Files/POO/20210106-ExercicioListaTelefonica/target/
 /Java Files/POO/20210106-ExercicioJogoDeCartas/nbproject/
+/Java Files/POO/prj_Exc1/target/
