--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@
 /Java Files/POO/20210106-ExercicioListaTelefonica/target/
 /Java Files/POO/20210106-ExercicioJogoDeCartas/nbproject/
 /Java Files/POO/prj_Exc1/target/
+/Java Files/POO/20210108-ExercicioAniversario/target/
