Bug fixes, verificações e outras cositas mas do exercício Filmes

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@
 /Java Files/POO/20210106-ExercicioJogoDeCartas/nbproject/
 /Java Files/POO/prj_Exc1/target/
 /Java Files/POO/20210108-ExercicioAniversario/target/
+/Java Files/POO/20210108-ExercicioFilme/target/
