--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@
 /Java Files/POO/prj_Exc1/target/
 /Java Files/POO/20210108-ExercicioAniversario/target/
 /Java Files/POO/20210108-ExercicioFilme/target/
+/Java Files/POO/20210109-SocketTest/target/
