--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,5 @@
 /Java Files/POO/20210108-ExercicioAniversario/target/
 /Java Files/POO/20210108-ExercicioFilme/target/
 /Java Files/POO/20210109-SocketTest/target/
+/Java Files/POO/20210111-JavaFXMyTest/target/
+/Java Files/POO/20210111-ConverterGUI/target/
