Exercicio DataGUI criado, sem utilizar o modelo fornecido

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,5 @@
 /Java Files/POO/20210109-SocketTest/target/
 /Java Files/POO/20210111-JavaFXMyTest/target/
 /Java Files/POO/20210111-ConverterGUI/target/
+/Java Files/POO/20210112-ExercicioContadorDeCliques/target/
+/Java Files/POO/20210112-ExercicioDataGUI/target/
