Exercicio Shift completado

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@
 /Java Files/POO/20210111-ConverterGUI/target/
 /Java Files/POO/20210112-ExercicioContadorDeCliques/target/
 /Java Files/POO/20210112-ExercicioDataGUI/target/
+/Java Files/POO/20210112-ExercicioShift/target/
