--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@
 /Java Files/POO/20210112-ExercicioContadorDeCliques/target/
 /Java Files/POO/20210112-ExercicioDataGUI/target/
 /Java Files/POO/20210112-ExercicioShift/target/
+/Java Files/POO/20210112-ListaTelefonicaGUI/target/
