Exercicio Lista de Tarefas

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,5 @@
 /Java Files/POO/20210112-ExercicioShift/target/
 /Java Files/POO/20210113-ListaTarefas/target/
 /Java Files/POO/20210112-ListaTelefonicaGUI/target/
+/Java Files/POO/20210114-ListaTarefasComFicheiros/ListaTarefasFicheiros/target/
+/Java Files/POO/20210114-ListaTarefasComFicheiros/target/
