--- a/Java Files/POO/20210116-AtletasComFicheiros/pom.xml
+++ b/Java Files/POO/20210116-AtletasComFicheiros/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.mycompany</groupId>
+    <groupId>upskill</groupId>
     <artifactId>20210116-AtletasComFicheiros</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
@@ -11,7 +11,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <mainClass>org.upskill.listatarefas.ui.MainApp</mainClass>
+        <mainClass>upskill.atletascomficheiros.ui.MainApp</mainClass>
     </properties>
 
     <organization>
