exercicios genericos concluido

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,4 @@
 /Java Files/POO/20210112-ListaTelefonicaGUI/target/
 /Java Files/POO/20210114-ListaTarefasComFicheiros/ListaTarefasFicheiros/target/
 /Java Files/POO/20210114-ListaTarefasComFicheiros/target/
+/Java Files/POO/20210118-MatrizGenerica/target/
