--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,4 @@
 /Java Files/POO/20210114-ListaTarefasComFicheiros/ListaTarefasFicheiros/target/
 /Java Files/POO/20210114-ListaTarefasComFicheiros/target/
 /Java Files/POO/20210118-MatrizGenerica/target/
+/Java Files/POO/20210118-ExercicioMyPairList/target/
