--- a/Java Files/POO/20210118-ExercicioMyPairList/pom.xml
+++ b/Java Files/POO/20210118-ExercicioMyPairList/pom.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.dei</groupId>
-    <artifactId>20210118-MatrizGenerica</artifactId>
+    <groupId>upskill</groupId>
+    <artifactId>20210118-ExercicioMyPairList</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <properties>
@@ -10,5 +10,4 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
-    <name>20210118-MatrizGenerica</name>
 </project>
