--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,4 @@
 /Java Files/POO/20210114-ListaTarefasComFicheiros/target/
 /Java Files/POO/20210118-MatrizGenerica/target/
 /Java Files/POO/20210118-ExercicioMyPairList/target/
+/Java Files/POO/20210116-AtletasComFicheiros/target/
